Evaluation, bleuscore, summarizer finalized

--- a/Text Summarization Module/summarization.ipynb
+++ b/Text Summarization Module/summarization.ipynb
@@ -54,6 +54,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "input_text = open(\"/Users/gamingspectrum24/Documents/PRG/Projects/Full Stack/SummaEase-Text-And-Speech-Summarizer-using-LLM/Data/train.txt\",'r')\n",
+        "summary_text = open(\"/Users/gamingspectrum24/Documents/PRG/Projects/Full Stack/SummaEase-Text-And-Speech-Summarizer-using-LLM/Data/summary.txt\",'r')"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 3,
       "metadata": {
         "id": "SMz1vv20ldJ8"
@@ -61,8 +71,7 @@
       "outputs": [],
       "source": [
         "sample_data = [\n",
-        "    {'input_text': 'This is an example input text.', 'target_text': 'Example summary.'},\n",
-        "    {'input_text': 'Another input text for summarization.', 'target_text': 'Summary of the second text.'},\n",
+        "    {'input_text': input_text.read(), 'target_text': summary_text.read()},\n",
         "]"
       ]
     },
@@ -356,10 +365,11 @@
       },
       "outputs": [],
       "source": [
-        "file = open(\"/Users/gamingspectrum24/Documents/PRG/Projects/SummaEase-Text-And-Speech-Summarizer-using-LLM/Data/input.txt\",'r')\n",
+        "file = open(\"/Users/gamingspectrum24/Documents/PRG/Projects/Full Stack/SummaEase-Text-And-Speech-Summarizer-using-LLM/Data/target_input.txt\",'r')\n",
         "input_text = file.read()\n",
         "summary = generate_summary(input_text)\n",
-        "print(summary)"
+        "with open(\"/Users/gamingspectrum24/Documents/PRG/Projects/Full Stack/SummaEase-Text-And-Speech-Summarizer-using-LLM/Data/summary.txt\", 'w') as file:\n",
+        "    file.write(summary)"
       ]
     }
   ],
