added datasets and code

--- a/Text Summarization Module/summarization.ipynb
+++ b/Text Summarization Module/summarization.ipynb
@@ -21,17 +21,18 @@
             "Requirement already satisfied: numpy>=1.17 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from transformers) (1.25.2)\n",
             "Requirement already satisfied: packaging>=20.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from transformers) (23.1)\n",
             "Requirement already satisfied: pyyaml>=5.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from transformers) (6.0.1)\n",
-            "Requirement already satisfied: regex!=2019.12.17 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from transformers) (2023.8.8)\n",
+            "Requirement already satisfied: regex!=2019.12.17 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from transformers) (2023.12.25)\n",
             "Requirement already satisfied: requests in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from transformers) (2.31.0)\n",
             "Requirement already satisfied: tokenizers<0.19,>=0.14 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from transformers) (0.15.2)\n",
             "Requirement already satisfied: safetensors>=0.4.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from transformers) (0.4.2)\n",
-            "Requirement already satisfied: tqdm>=4.27 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from transformers) (4.66.1)\n",
+            "Requirement already satisfied: tqdm>=4.27 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from transformers) (4.66.2)\n",
             "Requirement already satisfied: fsspec>=2023.5.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from huggingface-hub<1.0,>=0.19.3->transformers) (2024.3.1)\n",
             "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from huggingface-hub<1.0,>=0.19.3->transformers) (4.7.1)\n",
             "Requirement already satisfied: charset-normalizer<4,>=2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from requests->transformers) (3.2.0)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from requests->transformers) (2.10)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from requests->transformers) (2.0.4)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from requests->transformers) (2023.7.22)\n"
+            "Requirement already satisfied: certifi>=2017.4.17 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from requests->transformers) (2023.7.22)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
           ]
         }
       ],
@@ -54,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -64,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "SMz1vv20ldJ8"
       },
@@ -77,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "id": "FGh35pSyn8eK"
       },
@@ -163,64 +164,7 @@
         "id": "ybmOgSThpZXd",
         "outputId": "7a549673-bb88-4fac-ba16-9867d86ee85c"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "814e0e81e2174a45812b23cfad38ed03",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "vocab.json:   0%|          | 0.00/899k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "41acab2d25784a629319d088f30745ab",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "merges.txt:   0%|          | 0.00/456k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "011350a80cc346f3bde96ce1f474ac37",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "tokenizer.json:   0%|          | 0.00/1.36M [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "939d40ca27884760950f33eeb11f4f63",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "config.json:   0%|          | 0.00/1.58k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "dataset = CustomDataset(sample_data)"
       ]
@@ -233,9 +177,9 @@
       },
       "outputs": [],
       "source": [
-        "batch_size = 2\n",
+        "batch_size = 5\n",
         "learning_rate = 0.01\n",
-        "num_epochs = 5"
+        "num_epochs = 10"
       ]
     },
     {
@@ -277,12 +221,12 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "9d26c89a7e78436fbdf8546e73f38962",
+              "model_id": "dd135736d3c8492bb040995ae3cac83b",
               "version_major": 2,
               "version_minor": 0
             },
             "text/plain": [
-              "model.safetensors:   0%|          | 0.00/1.63G [00:00<?, ?B/s]"
+              "generation_config.json:   0%|          | 0.00/363 [00:00<?, ?B/s]"
             ]
           },
           "metadata": {},
@@ -295,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "n4XYJhThpkQE"
       },
@@ -306,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "rdyNCOI0pnQf"
       },
@@ -318,7 +262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "Nz21HsZTpppF"
       },
@@ -339,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "tpfYOMSRpuJY"
       },
@@ -355,7 +299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -368,7 +312,7 @@
         "file = open(\"/Users/gamingspectrum24/Documents/PRG/Projects/Full Stack/SummaEase-Text-And-Speech-Summarizer-using-LLM/Data/target_input.txt\",'r')\n",
         "input_text = file.read()\n",
         "summary = generate_summary(input_text)\n",
-        "with open(\"/Users/gamingspectrum24/Documents/PRG/Projects/Full Stack/SummaEase-Text-And-Speech-Summarizer-using-LLM/Data/summary.txt\", 'w') as file:\n",
+        "with open(\"/Users/gamingspectrum24/Documents/PRG/Projects/Full Stack/SummaEase-Text-And-Speech-Summarizer-using-LLM/Data/target_summary.txt\", 'w') as file:\n",
         "    file.write(summary)"
       ]
     }
