--- a/Text Summarization Module/summarization.ipynb
+++ b/Text Summarization Module/summarization.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -11,6 +11,13 @@
         "outputId": "1bb84043-a9b2-4334-8528-c2e6fb3cbd6e"
       },
       "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Python(8970) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
+          ]
+        },
         {
           "name": "stdout",
           "output_type": "stream",
@@ -27,7 +34,7 @@
             "Requirement already satisfied: safetensors>=0.4.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from transformers) (0.4.2)\n",
             "Requirement already satisfied: tqdm>=4.27 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from transformers) (4.66.2)\n",
             "Requirement already satisfied: fsspec>=2023.5.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from huggingface-hub<1.0,>=0.19.3->transformers) (2024.3.1)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from huggingface-hub<1.0,>=0.19.3->transformers) (4.7.1)\n",
+            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from huggingface-hub<1.0,>=0.19.3->transformers) (4.11.0)\n",
             "Requirement already satisfied: charset-normalizer<4,>=2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from requests->transformers) (3.2.0)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from requests->transformers) (2.10)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from requests->transformers) (2.0.4)\n",
@@ -37,17 +44,7 @@
         }
       ],
       "source": [
-        "%pip install transformers"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "id": "zwOf6w6olch5"
-      },
-      "outputs": [],
-      "source": [
+        "%pip install transformers\n",
         "import torch\n",
         "from transformers import BartForConditionalGeneration, BartTokenizer\n",
         "from torch.utils.data import DataLoader, Dataset"
@@ -55,39 +52,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "input_text = open(\"/Users/gamingspectrum24/Documents/PRG/Projects/Full Stack/SummaEase-Text-And-Speech-Summarizer-using-LLM/Data/train.txt\",'r')\n",
-        "summary_text = open(\"/Users/gamingspectrum24/Documents/PRG/Projects/Full Stack/SummaEase-Text-And-Speech-Summarizer-using-LLM/Data/summary.txt\",'r')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {
-        "id": "SMz1vv20ldJ8"
-      },
-      "outputs": [],
-      "source": [
-        "sample_data = [\n",
-        "    {'input_text': input_text.read(), 'target_text': summary_text.read()},\n",
-        "]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 19,
       "metadata": {
         "id": "FGh35pSyn8eK"
       },
       "outputs": [],
       "source": [
         "class CustomDataset(Dataset):\n",
-        "    def __init__(self, data):\n",
+        "    def __init__(self, data, tokenizer):\n",
         "        self.data = data\n",
-        "        self.tokenizer = BartTokenizer.from_pretrained('facebook/bart-large-cnn')\n",
+        "        self.tokenizer = tokenizer\n",
         "\n",
         "    def __len__(self):\n",
         "        return len(self.data)\n",
@@ -109,7 +83,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "input_text_path = \"/Users/gamingspectrum24/Documents/PRG/Projects/Full Stack/SummaEase-Text-And-Speech-Summarizer-using-LLM/Data/train.txt\"\n",
+        "summary_text_path = \"/Users/gamingspectrum24/Documents/PRG/Projects/Full Stack/SummaEase-Text-And-Speech-Summarizer-using-LLM/Data/summary.txt\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -166,25 +150,26 @@
       },
       "outputs": [],
       "source": [
-        "dataset = CustomDataset(sample_data)"
+        "sample_data = [\n",
+        "    {'input_text': open(input_text_path, 'r').read(), 'target_text': open(summary_text_path, 'r').read()},\n",
+        "]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 22,
       "metadata": {
         "id": "zKWfCc09pcrb"
       },
       "outputs": [],
       "source": [
-        "batch_size = 5\n",
-        "learning_rate = 0.01\n",
-        "num_epochs = 10"
+        "tokenizer = BartTokenizer.from_pretrained('facebook/bart-large-cnn')\n",
+        "dataset = CustomDataset(sample_data, tokenizer)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -217,102 +202,80 @@
         "id": "T4T3pMEtph-w",
         "outputId": "dd7fbdb8-59ec-442a-c64c-9ad3e20895dd"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "dd135736d3c8492bb040995ae3cac83b",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "generation_config.json:   0%|          | 0.00/363 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "model = BartForConditionalGeneration.from_pretrained('facebook/bart-large-cnn')"
+        "batch_size = 5\n",
+        "learning_rate = 0.01\n",
+        "num_epochs = 10"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 24,
       "metadata": {
         "id": "n4XYJhThpkQE"
       },
       "outputs": [],
       "source": [
-        "dataloader = DataLoader(dataset, batch_size=batch_size, shuffle=True)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 10,
-      "metadata": {
-        "id": "rdyNCOI0pnQf"
-      },
-      "outputs": [],
-      "source": [
+        "model = BartForConditionalGeneration.from_pretrained('facebook/bart-large-cnn')\n",
+        "dataloader = DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
         "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
         "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=1, gamma=0.9)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {
-        "id": "Nz21HsZTpppF"
-      },
+      "execution_count": 25,
+      "metadata": {},
       "outputs": [],
       "source": [
         "for epoch in range(num_epochs):\n",
-        "  model.train()\n",
-        "  for batch in dataloader:\n",
-        "    input_ids, attention_mask, target_ids = batch\n",
-        "    optimizer.zero_grad()\n",
-        "    outputs = model(input_ids=input_ids, attention_mask=attention_mask, decoder_input_ids=target_ids[:, :-1])\n",
-        "    logits = outputs.logits\n",
-        "    loss = torch.nn.functional.cross_entropy(logits.view(-1, logits.shape[-1]), target_ids[:, 1:].reshape(-1))\n",
-        "    loss.backward()\n",
-        "    optimizer.step()\n",
-        "  scheduler.step()"
+        "    model.train()\n",
+        "    for batch in dataloader:\n",
+        "        input_ids, attention_mask, target_ids = batch\n",
+        "        optimizer.zero_grad()\n",
+        "        outputs = model(input_ids=input_ids, attention_mask=attention_mask, decoder_input_ids=target_ids[:, :-1])\n",
+        "        logits = outputs.logits\n",
+        "        loss = torch.nn.functional.cross_entropy(logits.view(-1, logits.shape[-1]), target_ids[:, 1:].reshape(-1))\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "    scheduler.step()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {
-        "id": "tpfYOMSRpuJY"
-      },
+      "execution_count": 26,
+      "metadata": {},
       "outputs": [],
       "source": [
         "def generate_summary(input_text):\n",
         "    model.eval()\n",
-        "    inputs = dataset.tokenizer([input_text], max_length=1024, return_tensors='pt', truncation=True)\n",
-        "    summary_ids = model.generate(inputs['input_ids'], num_beams=4, max_length=150, early_stopping=True)\n",
-        "    summary = dataset.tokenizer.decode(summary_ids[0], skip_special_tokens=True)\n",
+        "    inputs = tokenizer([input_text], max_length=2048, return_tensors='pt', truncation=True)\n",
+        "    summary_ids = model.generate(inputs['input_ids'], num_beams=4, max_length=500, early_stopping=True)\n",
+        "    summary = tokenizer.decode(summary_ids[0], skip_special_tokens=True)\n",
         "    return summary"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "IIpQrctzovcJ",
-        "outputId": "f836b27a-0142-4b3e-d06c-906e4398089a"
-      },
+      "execution_count": 27,
+      "metadata": {},
       "outputs": [],
       "source": [
-        "file = open(\"/Users/gamingspectrum24/Documents/PRG/Projects/Full Stack/SummaEase-Text-And-Speech-Summarizer-using-LLM/Data/target_input.txt\",'r')\n",
-        "input_text = file.read()\n",
-        "summary = generate_summary(input_text)\n",
-        "with open(\"/Users/gamingspectrum24/Documents/PRG/Projects/Full Stack/SummaEase-Text-And-Speech-Summarizer-using-LLM/Data/target_summary.txt\", 'w') as file:\n",
+        "input_text_path = \"/Users/gamingspectrum24/Documents/PRG/Projects/Full Stack/SummaEase-Text-And-Speech-Summarizer-using-LLM/Data/target_input.txt\"\n",
+        "with open(input_text_path, 'r') as file:\n",
+        "    input_text = file.read()\n",
+        "summary = generate_summary(input_text)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "output_summary_path = \"/Users/gamingspectrum24/Documents/PRG/Projects/Full Stack/SummaEase-Text-And-Speech-Summarizer-using-LLM/Data/target_summary.txt\"\n",
+        "with open(output_summary_path, 'w') as file:\n",
         "    file.write(summary)"
       ]
     }
