Final module ready

--- a/Text Summarization Module/summarization.ipynb
+++ b/Text Summarization Module/summarization.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -15,7 +15,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Python(8970) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
+            "Python(13238) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
           ]
         },
         {
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 10,
       "metadata": {
         "id": "FGh35pSyn8eK"
       },
@@ -83,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -157,7 +157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 13,
       "metadata": {
         "id": "zKWfCc09pcrb"
       },
@@ -169,7 +169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -204,14 +204,14 @@
       },
       "outputs": [],
       "source": [
-        "batch_size = 5\n",
-        "learning_rate = 0.01\n",
-        "num_epochs = 10"
+        "batch_size = 10\n",
+        "learning_rate = 5e-5\n",
+        "num_epochs = 15"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 15,
       "metadata": {
         "id": "n4XYJhThpkQE"
       },
@@ -225,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -244,7 +244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -258,7 +258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -270,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
